samples/_failures_safe/1761086393_6ac962_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eab14008.c: In function ‘main’:
./samples/SAFE/__tmp_eab14008.c:163:24: error: missing terminating " character
  163 |                 printf("Invalid input\n
      |                        ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_eab14008.c:163:17: error: expected expression at end of input
  163 |                 printf("Invalid input\n
      |                 ^~~~~~
./samples/SAFE/__tmp_eab14008.c:163:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_eab14008.c:163:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_eab14008.c:163:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_eab14008.c:163:17: error: expected declaration or statement at end of input
